# haskell-moduls

./: .gitignore  10_10_Exercises.hs  10_6_DatabaseProcessing.hs  10_UnderstandingFolds.hs  11_18_ChapterExercises.hs  11_18_VigenereCipher.hs  11_18_Vigenerecipher_Robert.hs  11_5_DogExercises.hs  11_6_Vehicles.hs  11_8_Cardinality.hs  12_5_ChapterExercises.hs  13_14_Exercises.hs  13_14_VigenereCipherUI.hs  15_Exercise_Optional_Monoid.hs  15_Exercise_Semigroup.hs  15_testArbitrary_robert.hs  16_10_Exercises_Func_Instances.hs  16_11_Exercise_possibly.hs  16_17_Chapter_Exercises.hs  16_Exercises_functor.hs  16_Functor.hs  17_9_Ch_Exs_Applicative_Instances.hs  17_9_Chapter_Exercises.hs  17_ApplicativeExercise.hs  17_ApplicativeLookups.hs  18_2_Monad_bind.hs  18_7_Chapter_Exercises.hs  18_testMonad_Robert.hs  19_XMonad.hs  19_web_scotty.hs  1_11_chapter_exercises.txt  20_Exercises.hs  2_11_EqualExpressions.hs  2_11_EqualExpressions2.hs  2_11_EqualExpressions_hs.hs  2_11_Paranthesization.hs  3_8_BuildingFunctions.hs  3_8_ReadingSyntax.hs  3_8_ReadingSyntax_2.hs  3_8_Reverse.hs  (+61 more)
hackerrank/: .~lock.Bangalore_Analyse.ods#  AppleAndOrange.hs  ArrayExtensions.hs  AufgabeFFP3.hs  BangaloreBank.hs  BangaloreBank_solved_it.hs  Bangalore_Analyse.ods  BetweenTwoSets.hs  BirthdayChocolate.hs  BitterChocolate.hs  BotSavesPrincess.hs  BotSavesPrincess2.hs  BreakingTheRecords.hs  CompareTheTriplets.hs  DicePath.hs  DicePath_old.hs  DifferentWays.hs  Evaluating_e^x.hs  Expressions.hs  Expressions_single_mul_all.hs  Expressions_single_mul_first.hs  Fibonacci.hs  FibonacciNumbers.hs  FilterArray.hs  FilterPositionsInList.hs  FunctionsOrNot.hs  GradingStudents.hs  HelloWorldNTimes.hs  IntegralAreaVolume.hs  Kangoroo.hs  Klotski.hs  Klotski.latex  Klotski2_Target_DFS_within_BFS_.hs  Klotski3_anonym_blocks_Target_DFS_within_BFS.hs  Klotski5_slow_but_correct.hs  Klotski6_Integer_compressed.hs  KlotskiFast.hs  Klotski_Analyse.ods  Klotski_BFS_only.hs  Klotski_Javran.hs  (+53 more)
projects/14_7_WordNumberTest/: .gitignore  ChangeLog.md  README.md  package.yaml
projects/15_Exercise_Semigroup/: 15_Exercise_Semigroup.hs  ExerciseSemigroup.cabal  LICENSE  README.md
projects/15_Exercise_Semigroup/.stack-work/install/x86_64-linux/lts-10.7/8.2.2/flag-cache/: QuickCheck-2.10.1-4Os66uOJMCzBKiZgTbIvyk  primitive-0.6.3.0-CXy1O9sQYlI58rn9KQkFyo  random-1.1-LLUGZ7T9DqQ5vN0Jbcd0We  tf-random-0.5-H0EZh6X3duX25gCCL9n0I3
projects/ApplicativeExercise/: .gitignore  17_ApplicativeExercise.hs  ChangeLog.md  LICENSE  README.md  package.yaml
projects/ApplicativeInstances/: 17_9_Ch_Exs_Applicative_Instances.hs  ApplicativeInstances.cabal  README.md
projects/ChapterExercises18/: 18_7_Chapter_Exercises.hs  ChapterExercises18.cabal  README.md
projects/FuncInstances/: .gitignore  16_10_Exercises_Func_Instances.hs  ChangeLog.md  README.md  package.yaml
projects/WebScotty/: 19_web_scotty.hs  README.md  WebScotty.cabal  stack.yaml
projects/WebScotty/.stack-work/install/x86_64-linux/lts-11.1/8.2.2/flag-cache/: Cabal-2.0.1.1-ARIl7MGNKZFBAH1HVzpC6s  aeson-1.2.4.0-IvrO5GAegP7LjoNPWPphBD  aeson-compat-0.3.7.1-2yForPW72TuFOKEFlq3pbF  ansi-terminal-0.8.0.2-IpPwz0rbeQT9XeWFhl38AU  appar-0.1.4-4hjiMZCExd3CrJSMoeXviI  async-2.1.1.1-K429Y4XjamzDpSomhW85Gx  attoparsec-0.13.2.2-GDPtaDtbrn1Lh03rIUmXgK  attoparsec-iso8601-1.0.0.0-LdzS1Ji6ej23qBCLawGwav  auto-update-0.1.4-DRogbfFYNQeJCAE3NJ8IZH  base-compat-0.9.3-915GC5pH10BBmcMnCvMsPA  base64-bytestring-1.0.0.1-8MlzMz2YH3lCqJ4GOwL1Be  blaze-builder-0.4.1.0-BFOenXCaiVr8U0JVhwUfLi  blaze-html-0.9.0.1-84OXykbyE0R9ZdEtuaV3w2  blaze-markup-0.8.2.0-BC2OdJZnDet1GkrNw1YfoW  byteorder-1.0.4-C3RUhEkbWDI7bhRvbw5CmU  bytestring-builder-0.10.8.1.0-EDQdR3R0EemEMKmDJYWM6n  cabal-doctest-1.0.6-K34z9qJFa9S9lhohNycUoO  case-insensitive-1.2.0.11-DieXAizupZnBb7Wfxln47O  colour-2.3.4-3MiiEznBxpfEYrMTHbnSer  cookie-0.4.4-IH6paS8rvPqCsK3tedBbTe  cpphs-1.20.8-4qz4Ij8cgjBERS28MKeWJw  data-default-class-0.1.2.0-8hmGYd6GPAfLQPQcWKOjRm  dlist-0.8.0.4-C5jxmU4NyxKI1pN7pAcXnu  easy-file-0.2.1-5b8TLyPnfnyBZsfKKpqnpK  exceptions-0.8.3-CYMTujxEbkkJnOJ7pW82ZD  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  fast-logger-2.4.11-BzUEUSSvpAELd0dQ3BWYyx  happy-1.19.9  hashable-1.2.7.0-LmYYwdRyxeo1gZdEWccp3y  http-date-0.0.6.1-2Jb5occIk4WEWDLGYnHf4X  http-types-0.12.1-20NLDWrYorfCy3zUNrIMsI  http2-1.6.3-HuxrbkdccPfEP3dufpLyVS  integer-logarithms-1.0.2.1-KAhnLbvomfTHb5G0xy3U7G  iproute-1.7.3-HsV4n70NaWD4WAa05ebVgz  lifted-base-0.2.3.12-KnyxeRaMqLRBcTXo636g7H  microlens-0.4.8.3-Hhd1pyfmRF65YkTRK2Yote  microlens-th-0.4.1.3-6LAZtQeO94f7iOXPbztt82  monad-control-1.0.2.3-KW4P5rxfhfj5WtFbu3Ojsg  monad-loops-0.4.3-Ad5oA5oDZiu5B1obbGSEb1  mtl-2.2.2-8XubxMJDT8QLsstvlNotkc  (+47 more)
projects/Xmonad/: 19_XMonad.hs  README.md  Xmonad.cabal  alsa-core.patch.txt
projects/Xmonad/src/: Main.hs
projects/addition/: Addition.hs  MulInt.hs  MulIntEthiopic.hs  MulIntOld.hs  MulIntShift.hs  addition.cabal  readme.addition.hs
projects/hangman/: hangman.cabal  hangman.cabal~
projects/hangman/.stack-work/install/x86_64-linux/lts-10.4/8.2.2/flag-cache/: random-1.1-LLUGZ7T9DqQ5vN0Jbcd0We  split-0.2.3.3-69JBPqG5rhJEaFzFyiVOGW
projects/hangman/.stack-work/install/x86_64-linux/lts-10.6/8.2.2/flag-cache/: HUnit-1.6.0.0-Co0VFs8PjIYJtvd3iwPPg  ansi-terminal-0.7.1.1-83gYTJ4SUfw3TVZfePHzOW  async-2.1.1.1-K429Y4XjamzDpSomhW85Gx  call-stack-0.1.0-BVjoAlBRe9FCSr5eFfllei  colour-2.3.4-3MiiEznBxpfEYrMTHbnSer  hspec-2.4.4-988Tq9WKkibKsAm3aZqY7I  hspec-core-2.4.4-Ib5ANkjT8KR75WXgaUE9TY  hspec-discover-2.4.4-7lu7rN66esZ31cqN0Q1d1c  hspec-expectations-0.8.2-u0Nf5sZGE0ADGpjIcTPpI  quickcheck-io-0.2.0-7UgsC7t0mA24u70xSNYJWt  setenv-0.1.1.3-4FEJPUU51wbJmlhCSZScDf  stm-2.4.5.0-15FdumhhnVEKazIoQZDzp1
projects/hangman/data/: create_dict_5_to_9_chars.sh  dict.txt  dict_kurz.txt  find_shortest_longest_word.sh  find_shortest_longest_word.sh~
projects/hangman/src/: Hangman.hs  Main.hs  Main.hs~
projects/hangman/src/System/: Random.hs
projects/hangman/tests/: tests.hs
projects/hello_/: hello.cabal
projects/hello_/src/: DogsRule.hs  Hello.hs  Main.hs
projects/morse/: morse.cabal
(+91 files in other folders)
