name:                ExerciseSemigroup
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/https://github.com/Ing-Josef-Klotzner/haskell-moduls/tree/haskell-training/projects/ExerciseSemigroup#readme
license:             BSD3
license-file:        LICENSE
author:              Ing. Josef Klotzner
maintainer:          josef.klotzner@gmail.com
copyright:           Ing. Josef Klotzner
category:            haskell training
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ExerciseSemigroup-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ExerciseSemigroup
                     , QuickCheck
  default-language:    Haskell2010

test-suite ExerciseSemigroup-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ExerciseSemigroup
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/https://github.com/Ing-Josef-Klotzner/haskell-moduls/tree/haskell-training/projects/ExerciseSemigroup
