name:                hangman
version:             0.1.0.0
synopsis:           Playing Hangman
description:        
homepage:            https://github.com/Ing-Josef-Klotzner/haskell-moduls/tree/haskell-training/projects/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Ing. Josef Klotzner
maintainer:          Ing. Josef Klotzner
copyright:           2018 Ing. Josef Klotzner
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                        , random
                        , split
