name:                hello
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/bitemyapp/hello#readme
license:             BSD3
license-file:        LICENSE
author:              Ing. Josef Klotzner
maintainer:          example@email.com
copyright:           2018, Ing. Josef Klotzner
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hello
  hs-source-dirs:   src
  main-is:          Main.hs
  build-depends:    base >= 4.7 && < 5
                    , DogsRule, Hello
  default-language: Haskell2010
  
library
  hs-source-dirs:   src
  exposed-modules:  DogsRule, Hello
  build-depends:    base >= 4.7 && < 5
  default-language: Haskell2010
